# brute

./: CMakeLists.txt
src/: brute.cpp  descriptor_task.h  parse_command_line.cpp  parse_command_line.h  words_bucket.cpp  words_bucket.h  worker_pool.cpp  worker_pool.h
tests/: CMakeLists.txt  tests.cpp
